--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgba(241, 241, 241, 1);
     font-family: 'Kanit';
+    margin: 0;
 }
 
 button {
@@ -11,7 +12,6 @@ button {
     display: flex;
     justify-content: space-between;
     height: 62px;
-    padding: 12px, 80px, 12px, 80px;
     align-items: center;
 }
 
@@ -30,7 +30,6 @@ button {
 .menu button {
     background-color: transparent;
     border: none;
-    padding: 10px, 12px, 10px, 12px;
     color: rgba(8, 30, 52, 1);
 }
 
