--- a/index.css
+++ b/index.css
@@ -1,62 +1,63 @@
 body {
-    background-color: rgba(241, 241, 241, 1);
-    font-family: 'Kanit';
-    margin: 0;
+  background-color: rgba(241, 241, 241, 1);
+  font-family: 'Kanit';
+  margin: 0;
+  padding: 0;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    height: 62px;
-    align-items: center;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  height: 62px;
+  align-items: center;
 }
 
 .logo {
-    display: flex;
-    align-items: center;
-    width: 144px;
-    height: 22px;
-    margin: 20px 0 20px 80px;
+  display: flex;
+  align-items: center;
+  width: 144px;
+  height: 22px;
+  margin: 20px 0 20px 80px;
 }
 
 .menu {
-    margin: 0 87.32px 0 0;
+  margin: 0 87.32px 0 0;
 }
 
 .menu button {
-    background-color: transparent;
-    border: none;
-    color: rgba(8, 30, 52, 1);
-    font-family: 'Inter';
-    height: 38px;
+  background-color: transparent;
+  border: none;
+  color: rgba(8, 30, 52, 1);
+  font-family: 'Inter';
+  height: 38px;
 }
 
 #get_started {
-    background-color: rgba(8, 30, 52, 0.12);
-    width: 102px;
-    border-radius: 100px;
+  background-color: rgba(8, 30, 52, 0.12);
+  width: 102px;
+  border-radius: 100px;
 }
 
 #magnifier {
-    width: 18.68px;
-    height: 22px;
-    margin-right: 10px;
+  width: 18.68px;
+  height: 22px;
+  margin-right: 10px;
 }
 
 #jumystap {
-    font-size: 18px;
-    color: rgba(0, 0, 0, 1);
+  font-size: 18px;
+  color: rgba(0, 0, 0, 1);
 }
 
 .description {
-    height: 620px;
+  height: 620px;
 }
 
 .how_it_works {
-    background-color: rgba(225, 222, 231, 1);
-    height: 562px;
+  background-color: rgba(225, 222, 231, 1);
+  height: 562px;
 }
