changed description page

--- a/css/index.css
+++ b/css/index.css
@@ -18,11 +18,14 @@ button {
   align-items: center;
   height: 62px;
   padding: 12px 80px 12px 80px;
+  gap: 748px;
 }
 
 .logo {
   display: flex;
   align-items: center;
+  width: 114.68px;
+  height: 22px;
   gap: 10px;
 }
 
@@ -32,6 +35,8 @@ button {
 }
 
 .logo p {
+  width: 86px;
+  height: 22px;
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
@@ -42,6 +47,8 @@ button {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  width: 410px;
+  height: 38px;
   gap: 16px;
   font-family: 'Inter', sans-serif;
 }
@@ -69,7 +76,89 @@ button {
 }
 
 .description {
+  display: flex;
   height: 620px;
+  padding: 100px 80px 100px 80px;
+  gap: 165px;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 495px;
+  height: 366px;
+  gap: 48px;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  width: 495px;
+  height: 268px;
+  gap: 32px;
+}
+
+.title {
+  width: 495px;
+  height: 192px;
+  font-family: 'Kanit';
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 64px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.paragrapgh {
+  width: 495px;
+  height: 44px;
+  font-family: 'Inter';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.info button {
+  background-color: #712fff;
+  color: rgba(255, 255, 255, 1);
+  width: 144px;
+  height: 50px;
+  border-radius: 100px;
+  border: none;
+  padding: 16px 24px 16px 24px;
+  font-size: 14px;
+  text-align: center;
+  gap: 10px;
+  line-height: 18px;
+  font-weight: 500;
+}
+
+.info button:hover {
+  box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
+}
+
+.info button:disabled {
+  background-color: rgba(31, 31, 31, 0.12);
+  color: rgba(28, 27, 31, 1);
+  font-family: 'Inter';
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.laptop {
+  width: 619px;
+  height: 420px;
+  border-radius: 32px;
 }
 
 .how_it_works {
