--- a/css/index.css
+++ b/css/index.css
@@ -17,8 +17,7 @@ button {
   justify-content: space-between;
   align-items: center;
   height: 62px;
-  padding: 12px 80px 12px 80px;
-  gap: 748px;
+  padding: 0 80px 0 80px;
 }
 
 .logo {
@@ -78,7 +77,7 @@ button {
 .description {
   display: flex;
   height: 620px;
-  padding: 100px 80px 100px 80px;
+  padding: 0 80px 0 80px;
   gap: 165px;
   align-items: center;
   justify-content: flex-start;
@@ -159,6 +158,21 @@ button {
   width: 619px;
   height: 420px;
   border-radius: 32px;
+}
+
+.dollar {
+  position: absolute;
+  width: 139px;
+  height: 181px;
+  left: 950px;
+}
+
+.fire {
+  position: absolute;
+  width: 148px;
+  height: 172px;
+  bottom: 131px;
+  left: 1200px;
 }
 
 .how_it_works {
