--- a/css/index.css
+++ b/css/index.css
@@ -161,7 +161,7 @@ button {
 .laptop {
   width: 619px;
   height: 420px;
-  border-radius: 32px;;
+  border-radius: 32px;
 }
 
 .dollar {
@@ -180,6 +180,53 @@ button {
 }
 
 .how_it_works {
+  display: flex;
+  flex-direction: column;
   background-color: rgba(225, 222, 231, 1);
   height: 562px;
+  border-radius: 32px;
+  border: none;
+  gap: 86px;
+  padding: 0 80px 0 80px;
+  justify-content: center;
+  align-items: center;
+}
+
+.top {
+  width: 351px;
+  height: 84px;
+  gap: 64px;
+  background-color: red;
+}
+
+.top_description {
+  font-family: 'Inter';
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.top_title {
+  font-family: 'Kanit';
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 56px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.bottom {
+  display: flex;
+  background-color: aqua;
+  width: 1280px;
+  height: 186px;
+  gap: 40px;
+}
+
+.bottom_info {
+  width: 400px;
+  height: 186px;
+  gap: 48px;
 }
