--- a/css/index.css
+++ b/css/index.css
@@ -226,6 +226,7 @@ button {
 
 .bottom_info {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   width: 400px;
   height: 186px;
