--- a/css/index.css
+++ b/css/index.css
@@ -123,7 +123,7 @@ button {
   text-align: left;
 }
 
-.info button {
+.button-main {
   background-color: #712fff;
   color: rgba(255, 255, 255, 1);
   width: 144px;
@@ -268,4 +268,52 @@ button {
   line-height: 22px;
   letter-spacing: 0em;
   text-align: left;
+}
+
+.input_field {
+  display: flex;
+  height: 422px;
+  padding: 0 80px 0 80px;
+  gap: 128px;
+  align-items: center;
+}
+
+.input_field_info {
+  display: flex;
+  flex-direction: column;
+  width: 757px;
+  height: 222px;
+  gap: 32px;
+}
+
+.input_field_info_title {
+  font-family: 'Kanit';
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 64px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.input_field_info_description {
+  font-family: 'Inter';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.input_field_info_search button {
+  width: 106px;
+  height: 50px;
+  padding: 16px 24px 16px 24px;
+  border-radius: 100px;
+  gap: 10px;
+  font-family: 'Inter';
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: center;
 }
