--- a/css/index.css
+++ b/css/index.css
@@ -349,3 +349,61 @@ button {
   letter-spacing: 0em;
   text-align: center;
 }
+
+.submission {
+  display: flex;
+  height: 548px;
+  padding: 0 80px 0 80px;
+  gap: 128px;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.submission .info {
+  width: 495px;
+  height: 214px;
+  gap: 32px;
+}
+
+.submission .info .text {
+  width: 495px;
+  height: 214px;
+  gap: 32px;
+}
+
+.submission .info .title {
+  width: 391px;
+  height: 56px;
+  font-family: 'Kanit';
+  font-size: 54px;
+  font-weight: 600;
+  line-height: 56px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.submission .info .paragrapgh {
+  width: 495px;
+  height: 44px;
+  font-family: 'Inter';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.submission .info .button-main {
+  width: 114px;
+  height: 50px;
+  padding: 16px 24px 16px 16px;
+  border-radius: 100px;
+  gap: 8px;
+}
+
+.upload_icon {
+  background: url(/images/upload.png) no-repeat;
+  float: left;
+  width: 18px;
+  height: 18px;
+}
